--- a/index.html
+++ b/index.html
@@ -18,79 +18,67 @@
       </div>
     </nav>
     <main class="grid">
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
-      <input type="text" maxlength="1" size="1" />
+      <input data-ip="0" type="text" maxlength="1" size="1" />
+      <input data-ip="1" type="text" maxlength="1" size="1" />
+      <input data-ip="2" type="text" maxlength="1" size="1" />
+      <input data-ip="3" type="text" maxlength="1" size="1" />
+      <input data-ip="4" type="text" maxlength="1" size="1" />
+      <input data-ip="5" type="text" maxlength="1" size="1" />
+      <input data-ip="6" type="text" maxlength="1" size="1" />
+      <input data-ip="7" type="text" maxlength="1" size="1" />
+      <input data-ip="8" type="text" maxlength="1" size="1" />
+      <input data-ip="9" type="text" maxlength="1" size="1" />
+      <input data-ip="10" type="text" maxlength="1" size="1" />
+      <input data-ip="11" type="text" maxlength="1" size="1" />
+      <input data-ip="12" type="text" maxlength="1" size="1" />
+      <input data-ip="13" type="text" maxlength="1" size="1" />
+      <input data-ip="14" type="text" maxlength="1" size="1" />
+      <input data-ip="15" type="text" maxlength="1" size="1" />
+      <input data-ip="16" type="text" maxlength="1" size="1" />
+      <input data-ip="17" type="text" maxlength="1" size="1" />
+      <input data-ip="18" type="text" maxlength="1" size="1" />
+      <input data-ip="19" type="text" maxlength="1" size="1" />
+      <input data-ip="20" type="text" maxlength="1" size="1" />
+      <input data-ip="21" type="text" maxlength="1" size="1" />
+      <input data-ip="22" type="text" maxlength="1" size="1" />
+      <input data-ip="23" type="text" maxlength="1" size="1" />
+      <input data-ip="24" type="text" maxlength="1" size="1" />
+      <input data-ip="25" type="text" maxlength="1" size="1" />
+      <input data-ip="26" type="text" maxlength="1" size="1" />
+      <input data-ip="27" type="text" maxlength="1" size="1" />
+      <input data-ip="28" type="text" maxlength="1" size="1" />
+      <input data-ip="29" type="text" maxlength="1" size="1" />
     </main>
 
     <section id="keyboard">
-      <button>Q</button>
-      <button>W</button>
-      <button>E</button>
-      <button>R</button>
-      <button>T</button>
-      <button>Y</button>
-      <button>U</button>
-      <button>I</button>
-      <button>O</button>
-      <button>P</button>
+      <button data-val="Q">Q</button>
+      <button data-val="W">W</button>
+      <button data-val="E">E</button>
+      <button data-val="R">R</button>
+      <button data-val="T">T</button>
+      <button data-val="Y">Y</button>
+      <button data-val="U">U</button>
+      <button data-val="I">I</button>
+      <button data-val="O">O</button>
+      <button data-val="P">P</button>
       <button data-val="A">A</button>
-      <button>S</button>
-      <button>D</button>
-      <button>F</button>
-      <button>G</button>
-      <button>H</button>
-      <button>J</button>
-      <button>K</button>
-      <button>L</button>
-      <button data-val="enter">ENTER</button>
-      <button>Z</button>
-      <button>X</button>
-      <button>C</button>
-      <button>V</button>
-      <button>B</button>
-      <button>N</button>
-      <button>M</button>
-      <button data-val="backspace">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          height="20"
-          viewBox="0 0 24 24"
-          width="20"
-        >
-          <path
-            fill="var(--color-tone-1)"
-            d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z"
-          ></path>
-        </svg>
-      </button>
+      <button data-val="S">S</button>
+      <button data-val="D">D</button>
+      <button data-val="F">F</button>
+      <button data-val="G">G</button>
+      <button data-val="H">H</button>
+      <button data-val="J">J</button>
+      <button data-val="K">K</button>
+      <button data-val="L">L</button>
+      <button data-val="Enter">ENTER</button>
+      <button data-val="Z">Z</button>
+      <button data-val="X">X</button>
+      <button data-val="C">C</button>
+      <button data-val="V">V</button>
+      <button data-val="B">B</button>
+      <button data-val="N">N</button>
+      <button data-val="M">M</button>
+      <button data-val="Backspace">DEL</button>
     </section>
 
     <script src="main.js" type="module"></script>
