--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wordle</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://www.powerlanguage.co.uk/wordle/images/wordle_logo_32x32.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body>
