Update styles and keyboard button highlight

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wordle</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://www.powerlanguage.co.uk/wordle/images/wordle_logo_32x32.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body>
@@ -18,36 +23,36 @@
       </div>
     </nav>
     <main class="grid">
-      <input data-ip="0" type="text" maxlength="1" size="1" />
-      <input data-ip="1" type="text" maxlength="1" size="1" />
-      <input data-ip="2" type="text" maxlength="1" size="1" />
-      <input data-ip="3" type="text" maxlength="1" size="1" />
-      <input data-ip="4" type="text" maxlength="1" size="1" />
-      <input data-ip="5" type="text" maxlength="1" size="1" />
-      <input data-ip="6" type="text" maxlength="1" size="1" />
-      <input data-ip="7" type="text" maxlength="1" size="1" />
-      <input data-ip="8" type="text" maxlength="1" size="1" />
-      <input data-ip="9" type="text" maxlength="1" size="1" />
-      <input data-ip="10" type="text" maxlength="1" size="1" />
-      <input data-ip="11" type="text" maxlength="1" size="1" />
-      <input data-ip="12" type="text" maxlength="1" size="1" />
-      <input data-ip="13" type="text" maxlength="1" size="1" />
-      <input data-ip="14" type="text" maxlength="1" size="1" />
-      <input data-ip="15" type="text" maxlength="1" size="1" />
-      <input data-ip="16" type="text" maxlength="1" size="1" />
-      <input data-ip="17" type="text" maxlength="1" size="1" />
-      <input data-ip="18" type="text" maxlength="1" size="1" />
-      <input data-ip="19" type="text" maxlength="1" size="1" />
-      <input data-ip="20" type="text" maxlength="1" size="1" />
-      <input data-ip="21" type="text" maxlength="1" size="1" />
-      <input data-ip="22" type="text" maxlength="1" size="1" />
-      <input data-ip="23" type="text" maxlength="1" size="1" />
-      <input data-ip="24" type="text" maxlength="1" size="1" />
-      <input data-ip="25" type="text" maxlength="1" size="1" />
-      <input data-ip="26" type="text" maxlength="1" size="1" />
-      <input data-ip="27" type="text" maxlength="1" size="1" />
-      <input data-ip="28" type="text" maxlength="1" size="1" />
-      <input data-ip="29" type="text" maxlength="1" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
+      <input type="text" size="1" />
     </main>
 
     <section id="keyboard">
