Add flip tile animation

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordle</title>
+    <title>Wordle - A Word Guessing Game</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
@@ -17,12 +17,9 @@
     <nav>
       <button>❓</button>
       <h1>WORDLE</h1>
-      <div>
-        <button>📊</button>
-        <button>⚙️</button>
-      </div>
+      <button>⚙️</button>
     </nav>
-    <main class="grid">
+    <main>
       <input type="text" size="1" />
       <input type="text" size="1" />
       <input type="text" size="1" />
