--- a/src/index.html
+++ b/src/index.html
@@ -53,33 +53,33 @@
     </main>
 
     <section id="keyboard">
-      <button data-val="Q">Q</button>
-      <button data-val="W">W</button>
-      <button data-val="E">E</button>
-      <button data-val="R">R</button>
-      <button data-val="T">T</button>
-      <button data-val="Y">Y</button>
-      <button data-val="U">U</button>
-      <button data-val="I">I</button>
-      <button data-val="O">O</button>
-      <button data-val="P">P</button>
-      <button data-val="A">A</button>
-      <button data-val="S">S</button>
-      <button data-val="D">D</button>
-      <button data-val="F">F</button>
-      <button data-val="G">G</button>
-      <button data-val="H">H</button>
-      <button data-val="J">J</button>
-      <button data-val="K">K</button>
-      <button data-val="L">L</button>
+      <button data-val="q">Q</button>
+      <button data-val="w">W</button>
+      <button data-val="e">E</button>
+      <button data-val="r">R</button>
+      <button data-val="t">T</button>
+      <button data-val="y">Y</button>
+      <button data-val="u">U</button>
+      <button data-val="i">I</button>
+      <button data-val="o">O</button>
+      <button data-val="p">P</button>
+      <button data-val="a">A</button>
+      <button data-val="s">S</button>
+      <button data-val="d">D</button>
+      <button data-val="f">F</button>
+      <button data-val="g">G</button>
+      <button data-val="h">H</button>
+      <button data-val="j">J</button>
+      <button data-val="k">K</button>
+      <button data-val="l">L</button>
       <button data-val="Enter">ENTER</button>
-      <button data-val="Z">Z</button>
-      <button data-val="X">X</button>
-      <button data-val="C">C</button>
-      <button data-val="V">V</button>
-      <button data-val="B">B</button>
-      <button data-val="N">N</button>
-      <button data-val="M">M</button>
+      <button data-val="z">Z</button>
+      <button data-val="x">X</button>
+      <button data-val="c">C</button>
+      <button data-val="v">V</button>
+      <button data-val="b">B</button>
+      <button data-val="n">N</button>
+      <button data-val="m">M</button>
       <button data-val="Backspace">DEL</button>
     </section>
 
