Show popup for invalid text

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,8 @@
       <button data-val="Backspace">DEL</button>
     </section>
 
+    <div class="toast">Word doesnt exist !</div>
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
